--- a/circle.yml
+++ b/circle.yml
@@ -1,24 +1,18 @@
 machine:
   node:
-    version: 0.12.2
-
-test:
-  override:
-    - npm test
-
-dependencies:
-  pre:
-    - npm install -g npm-cli-login@0.0.10
-    - NPM_USER=$NPM_USERNAME NPM_PASS=$NPM_PASSWORD npm-cli-login
+    version: 6.1.0
 
 deployment:
-  production:
+  development:
     branch: master
-    commands:
-      - npm --no-git-tag-version version `git describe --abbrev=0`
-      - npm --no-git-tag-version version patch
-      - git config --global user.email $GIT_EMAIL
-      - git config --global user.name $GIT_USERNAME
-      - git tag -a v`node .bin/version.js` -m v`node .bin/version.js`
-      - npm publish
-      - git push --tags
+    codedeploy:
+      drone-server:
+        application_root: /
+        revision_location:
+          revision_type: S3
+          s3_location:
+            bucket: chronicled-drone-server-codedeploy
+            key_pattern: drone-server-{BRANCH}-{SHORT_COMMIT}-{BUILD_NUM}
+        region: us-west-2
+        deployment_group: development
+        deployment_config: CodeDeployDefault.AllAtOnce
