--- a/package.json
+++ b/package.json
@@ -41,12 +41,27 @@
     }
   },
   "dependencies": {
+    "autoprefixer": "6.5.0",
+    "axios": "0.14.0",
+    "babel": "6.5.2",
+    "babel-plugin-transform-object-rest-spread": "6.16.0",
+    "babel-preset-react": "6.16.0",
     "bluebird": "3.4.6",
     "body-parser": "1.15.2",
+    "copy-webpack-plugin": "3.0.1",
+    "css-loader": "0.25.0",
     "express": "4.14.0",
     "forever": "0.15.2",
+    "json-loader": "0.5.4",
     "lodash": "4.16.3",
     "morgan": "1.7.0",
-    "open-registry-sdk": "0.0.34"
+    "open-registry-sdk": "0.0.34",
+    "postcss-loader": "0.13.0",
+    "react": "15.3.2",
+    "react-dom": "15.3.2",
+    "react-tap-event-plugin": "1.0.0",
+    "react-toggle": "2.1.1",
+    "style-loader": "0.13.1",
+    "webpack": "1.13.2"
   }
 }
