--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
       "eslint:recommended"
     ],
     "env": {
-      "node": true
+      "node": true,
+      "browser": true,
+      "es6": true
     },
     "parserOptions": {
       "ecmaVersion": 6,
@@ -51,6 +53,7 @@
     "copy-webpack-plugin": "3.0.1",
     "css-loader": "0.25.0",
     "express": "4.14.0",
+    "express-validator": "2.20.10",
     "forever": "0.15.2",
     "json-loader": "0.5.4",
     "lodash": "4.16.3",
